--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@react-navigation/stack": "^6.3.29",
     "@shopify/flash-list": "1.6.3",
     "expo": "~50.0.14",
-    "expo-image": "^1.12.12",
+    "expo-image": "~1.10.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-image": "^4.1.0",
     "react-native": "0.73.6",
+    "react-native-animatable": "^1.4.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
