--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.2.1",
+    "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -22,6 +23,7 @@
     "react-image": "^4.1.0",
     "react-native": "0.73.6",
     "react-native-animatable": "^1.4.0",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
